test/cli/test-context-resource-ivpol/.kyverno-test/clusterresources.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: clusterresources
spec:
  resources:
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: default
  - apiVersion: v1
    kind: ConfigMap
    metadata:
      name: policy-cm
      namespace: default
    data:
      env: prod
